-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0 Alpha
-
None
-
Windows 10, MSVC 2019
-
-
3bafe234940f6e3faef77f03a9a2d2071c12111b (qt/qtdeclarative/5.15)
If configured with -no-feature-tabletevent (historic setting we use because of errors in Wacom DLLs, while our app does not use tablet input),
Qt 5.15 Alpha build fails with (only very beginning of compiler log is quoted):
C:\Windows\apps\jom.exe -f Makefile.Debug all
cl -c -FIk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Yuk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Fp.pch\debug\Qt5Quickd_pch.pch -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -std:c++17 -utf-8 /wd4530 /wd4577 -MP -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 /Fd.obj\debug\Qt5Quickd.vc.pdb -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DWIN64 -DQT_NO_LINKED_LIST -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -D_CRT_SECURE_NO_WARNINGS -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -D_WINDLL -I. -I. -I..\..\include -Ik:\qt\5.15.0a-x64\qtbase\include -I..\..\include\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick -I..\..\include\QtQuick\5.15.0 -I..\..\include\QtQuick\5.15.0\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0\QtQuick -Itmp -I.tracegen\debug -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -I..\..\include\QtQmlModels\5.15.0 -I..\..\include\QtQmlModels\5.15.0\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0\QtQmlModels -I..\..\include\QtQml\5.15.0 -I..\..\include\QtQml\5.15.0\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -IK:\Qt\5.15.0a-x64\qtbase\include -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui -IK:\Qt\5.15.0a-x64\qtbase\include\QtANGLE -I..\..\include\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels -I..\..\include\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtNetwork -Ik:\qt\5.15.0a-x64\qtbase\include\QtNetwork -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore -I.moc\debug -IC:\VulkanSDK\1.1.126.0\include -IK:\Qt\5.15.0a-x64\qtbase\mkspecs\win32-msvc -Fo.obj\debug\ @D:\TEMP\lexa\qsgdefaultcontext.obj.31380.515.jom
qsgdefaultcontext.cpp
K:\Qt\5.15.0a-x64\qtdeclarative\src\quick\items\qquickevents_p_p.h(766): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int cl -c -FIk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Yuk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Fp.pch\debug\Qt5Quickd_pch.pch -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -std:c++17 -utf-8 /wd4530 /wd4577 -MP -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 /Fd.obj\debug\Qt5Quickd.vc.pdb -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DWIN64 -DQT_NO_LINKED_LIST -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -D_CRT_SECURE_NO_WARNINGS -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -D_WINDLL -I. -I. -I..\..\include -Ik:\qt\5.15.0a-x64\qtbase\include -I..\..\include\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick -I..\..\include\QtQuick\5.15.0 -I..\..\include\QtQuick\5.15.0\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0\QtQuick -Itmp -I.tracegen\debug -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -I..\..\include\QtQmlModels\5.15.0 -I..\..\include\QtQmlModels\5.15.0\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0\QtQmlModels -I..\..\include\QtQml\5.15.0 -I..\..\include\QtQml\5.15.0\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -IK:\Qt\5.15.0a-x64\qtbase\include -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui -IK:\Qt\5.15.0a-x64\qtbase\include\QtANGLE -I..\..\include\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels -I..\..\include\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtNetwork -Ik:\qt\5.15.0a-x64\qtbase\include\QtNetwork -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore -I.moc\debug -IC:\VulkanSDK\1.1.126.0\include -IK:\Qt\5.15.0a-x64\qtbase\mkspecs\win32-msvc -Fo.obj\debug\ @D:\TEMP\lexa\qsgcompressedtexture.obj.31380.547.jom
qsgcompressedtexture.cpp
K:\Qt\5.15.0a-x64\qtdeclarative\src\quick\items\qquickevents_p_p.h(766): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int
K:\Qt\5.15.0a-x64\qtdeclarative\src\quick\items\qquickevents_p_p.h(766): error C2143: syntax error: missing ',' before '*'
K:\Qt\5.15.0a-x64\qtdeclarative\src\quick\items\qquickevents_p_p.h(766): error C2143: syntax error: missing ',' before '*'
cl -c -FIk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Yuk:\qt\5.15.0a-x64\qtbase\include\QtQuick\QtQuickDepends -Fp.pch\debug\Qt5Quickd_pch.pch -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:__cplusplus -Zi -MDd -std:c++17 -utf-8 /wd4530 /wd4577 -MP -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 /Fd.obj\debug\Qt5Quickd.vc.pdb -DUNICODE -D_UNICODE -DWIN32 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -DWIN64 -DQT_NO_LINKED_LIST -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_URL_CAST_FROM_STRING -DQT_NO_INTEGER_EVENT_COORDINATES -D_CRT_SECURE_NO_WARNINGS -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_QUICK_LIB -DQT_BUILDING_QT -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -D_WINDLL -I. -I. -I..\..\include -Ik:\qt\5.15.0a-x64\qtbase\include -I..\..\include\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick -I..\..\include\QtQuick\5.15.0 -I..\..\include\QtQuick\5.15.0\QtQuick -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQuick\5.15.0\QtQuick -Itmp -I.tracegen\debug -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui\5.15.0\QtGui -I..\..\include\QtQmlModels\5.15.0 -I..\..\include\QtQmlModels\5.15.0\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels\5.15.0\QtQmlModels -I..\..\include\QtQml\5.15.0 -I..\..\include\QtQml\5.15.0\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml\5.15.0\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0 -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore\5.15.0\QtCore -IK:\Qt\5.15.0a-x64\qtbase\include -IK:\Qt\5.15.0a-x64\qtbase\include\QtGui -Ik:\qt\5.15.0a-x64\qtbase\include\QtGui -IK:\Qt\5.15.0a-x64\qtbase\include\QtANGLE -I..\..\include\QtQmlModels -Ik:\qt\5.15.0a-x64\qtbase\include\QtQmlModels -I..\..\include\QtQml -Ik:\qt\5.15.0a-x64\qtbase\include\QtQml -IK:\Qt\5.15.0a-x64\qtbase\include\QtNetwork -Ik:\qt\5.15.0a-x64\qtbase\include\QtNetwork -IK:\Qt\5.15.0a-x64\qtbase\include\QtCore -Ik:\qt\5.15.0a-x64\qtbase\include\QtCore -I.moc\debug -IC:\VulkanSDK\1.1.126.0\include -IK:\Qt\5.15.0a-x64\qtbase\mkspecs\win32-msvc -Fo.obj\debug\ @D:\TEMP\lexa\qquickdragaxis.obj.31380.859.jom
qquickdragaxis.cpp
...
The problem source is:
static QQuickPointerDevice *tabletDevice(const QTabletEvent *event);
(at line 766 of quick\items\qquickevents_p_p.h
It is not protected by #if QT_CONFIG(tabletevent) (as in Qt Gui)
For Gerrit Dashboard: QTBUG-82168 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
291087,2 | Make xcb plugin compile with -no-feature-tabletevent | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
291090,2 | Make qtdeclarative compile with -no-feature-tabletevent | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |