Make xcb plugin compile with -no-feature-tabletevent

fixed1616ToReal() is used for touch and scroll events too, not just
tablet.

Task-number: QTBUG-82168
Change-Id: Idcdd6365b5619824b41c1278e5dc5ffb81c400f8
Reviewed-by: Andy Shaw <andy.shaw@qt.io>